# servicio-rest-estadisticas-ventas

./: .dockerignore  .env.example  .gitignore  Dockerfile  MATRIZ_TRAZABILIDAD.md  Makefile  PROMPT_CODEX.md  README.md  Trabajo ReST(1).md  datos.json  docker-compose.yml  gunicorn.conf.py  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  extensions.py
app/api/: __init__.py  health.py  typing.py  ventas.py
app/cli/: __init__.py  ingest.py
app/domain/: __init__.py  enums.py  exceptions.py  models.py  sales_schema.py
app/errors/: __init__.py  handlers.py  problem_details.py
app/observability/: __init__.py  logging.py
app/repositories/: __init__.py  sales_repository.py
app/schemas/: __init__.py  errors.py  filters.py  statistics.py
app/services/: filter_service.py  ingestion_service.py  statistics_service.py
app/utils/: __init__.py  dates.py  hashing.py  locks.py  parquet.py  snapshot.py
scripts/: download_data.py  entrypoint.sh  generate_sample_data.py
tests/: conftest.py
tests/fixtures/: ventas.csv
tests/integration/: test_get_statistics.py  test_health_and_openapi.py  test_ingestion_cli.py  test_post_statistics.py  test_validation_errors.py
tests/unit/: test_dates.py  test_filter_service.py  test_logging.py  test_problem_details.py  test_statistics.py
