[build-system]
requires = ["setuptools>=80,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "cruz-morada-rest"
version = "0.1.0"
description = "Servicio REST de resumen estadístico de ventas de Cruz Morada"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.1,<3.2",
    "flask-smorest>=0.47,<0.48",
    "gunicorn>=26,<27",
    "marshmallow>=4.0,<5",
    "polars>=1.42,<1.43",
    "pyarrow>=25,<26",
    "python-dotenv>=1.2,<2",
    "python-json-logger>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.3,<2.4",
    "openapi-spec-validator>=0.9,<0.10",
    "pytest>=9.1,<10",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15,<0.16",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["B", "D", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/test_*.py" = ["D103"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "flask_smorest",
    "flask_smorest.*",
    "pyarrow",
    "pyarrow.*",
    "pythonjsonlogger",
    "pythonjsonlogger.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
